# bingo

./: .gitignore  Cargo.toml
src/: main.rs
