[package]
name = "bingo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Find secrets in files fast using Rust. Supports AWS keys, a bunch of others, private and public keys, etc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
regex = "1.5.4"
walkdir = "2.3.2"
